# fastapi-trino-demo

./: README.md  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: customers.py  products.py  sales.py
app/core/: config.py
app/models/: __init__.py  customers.py  products.py  sales.py  schemas.py
